--- a/development.ini
+++ b/development.ini
@@ -10,9 +10,9 @@
 [DEFAULT]
 debug = true
 # Uncomment and replace with the address which should receive any error reports
-email_to = xavid@mit.edu
+email_to = scripts-pony@mit.edu
 smtp_server = localhost
-error_email_from = paste@localhost
+error_email_from = pony@scripts.mit.edu
 
 [server:main]
 use = egg:Paste#http
@@ -33,21 +33,14 @@ beaker.session.secret = somesecret
 #beaker.cache.data_dir = %(here)s/data/cache
 #beaker.session.data_dir = %(here)s/data/sessions
 
-# pick the form for your database
-# %(here) may include a ':' character on Windows environments; this can
-# invalidate the URI when specifying a SQLite db via path name
-# sqlalchemy.url=postgres://username:password@hostname:port/databasename 
-# sqlalchemy.url=mysql://username:password@hostname:port/databasename
+# This is overridden in scriptspony.config.environment to have the
+# database name depend on the current user, to make us more relocatable
+sqlalchemy.url=mysql://sql.mit.edu/user+scripts-pony?read_default_file=~/.my.cnf
 
-
-# If you have sqlite, here's a simple default to get you started
-# in development
-
-sqlalchemy.url = sqlite:///%(here)s/devdata.db
 #echo shouldn't be used together with the logging module.
 sqlalchemy.echo = false
 sqlalchemy.echo_pool = false
-sqlalchemy.pool_recycle = 3600
+sqlalchemy.pool_recycle = 60
 
 # if you are using Mako and want to be able to reload
 # the mako template from disk during the development phase
