Use REMOTE_USER instead of parsing SSL_CLIENT_S_DN_Email.

--- a/web_scripts/.htaccess
+++ b/web_scripts/.htaccess
@@ -16,3 +16,6 @@ RewriteRule ^(?:dev/)?(.*)$ public/$1 [L]
 
 # Use FCGI for everything else
 RewriteRule ^(.*)$ dispatch\.fcgi/$1 [L]
+
+AuthType SSLCert
+Require valid-user
