* Allow scripts-team members to submit hostname requests for    arbitrary lockers, after getting through an unnecessarily red    confirmation screen.  * Re-architect template hierarchy to make putting general templates in    the scripts module more practicable.

--- a/development.ini
+++ b/development.ini
@@ -27,6 +27,10 @@ cache_dir = %(here)s/data
 beaker.session.key = scriptspony
 beaker.session.secret = somesecret
 
+# scripts module config
+title = Scripts Pony
+tagline = Manage Hostnames for scripts.mit.edu
+
 # If you'd like to fine-tune the individual locations of the cache data dirs
 # for the Cache data, or the Session saves, un-comment the desired settings
 # here:
