For personal Pony instances, make it zephyr the owner instead of syslogging and mail the owner instead of scripts-pony@.

--- a/development.ini
+++ b/development.ini
@@ -10,6 +10,7 @@
 [DEFAULT]
 debug = false
 # Uncomment and replace with the address which should receive any error reports
+# This is overridden in scriptspony.config.environment
 email_to = scripts-pony@mit.edu
 smtp_server = localhost
 error_email_from = pony@scripts.mit.edu
