--- a/development.ini
+++ b/development.ini
@@ -17,7 +17,7 @@ error_email_from = pony@scripts.mit.edu
 
 [server:main]
 use = egg:Paste#http
-host = b-k.mit.edu 
+host = 127.0.0.1
 port = 8424
 
 [app:main]
