Ignore unexpected keyword arguments
Signed-off-by: Anders Kaseorg <andersk@mit.edu>

--- a/scriptspony/controllers/controller.template
+++ b/scriptspony/controllers/controller.template
@@ -13,5 +13,5 @@ from scriptspony.lib.base import BaseController
 class SampleController(BaseController):
     
     @expose('scriptspony.templates.index')
-    def index(self):
+    def index(self, **kwargs):
         return dict(page='index')
