Allow configuring the path and principal for keytabs

--- a/development.ini
+++ b/development.ini
@@ -31,6 +31,8 @@ beaker.session.secret = somesecret
 # scripts module config
 title = Scripts Pony
 tagline = Manage Hostnames for scripts.mit.edu
+keytab = ~/Private/scripts-pony.keytab
+principal = daemon/scripts-pony.mit.edu
 
 # If you'd like to fine-tune the individual locations of the cache data dirs
 # for the Cache data, or the Session saves, un-comment the desired settings
